# Hands-On-Machine-Learning-with-CPP

./: .gitignore  README.md
Chapter01/dlib_samples/: CMakeLists.txt  linalg_dlib.cc  linreg_dlib.cc
Chapter01/eigen_samples/: CMakeLists.txt  linalg_eigen.cc  linreg_eigen.cc
Chapter01/sharkml_samples/: CMakeLists.txt  linalg_shark.cc  linreg_shark.cc
Chapter01/shogun_samples/: CMakeLists.txt  linreg_shogun.cc
Chapter01/xtensor_samples/: CMakeLists.txt  linalg_xtensor.cc
Chapter02/csv/cpp/: CMakeLists.txt  csv.cc
Chapter02/csv/dlib/: CMakeLists.txt  csv_dlib.cc
Chapter02/csv/sharkml/: CMakeLists.txt  csv_shark.cc
Chapter02/csv/shogun/: CMakeLists.txt  csv_shogun.cc
Chapter02/hdf5/cpp/: CMakeLists.txt  hdf5.cc
Chapter02/img/dlib/: CMakeLists.txt  img_dlib.cc
Chapter02/img/opencv/: CMakeLists.txt  ocv.cc
Chapter02/json/cpp/: CMakeLists.txt  json.cc  paper.h  review.h  reviewsreader.cpp  reviewsreader.h
Chapter03/dlib/: CMakeLists.txt  grid-dlib.cc
Chapter03/sharkml/: CMakeLists.txt  data.cpp  data.h  grid-shark.cc  monitor.h  plot.cpp  plot.h  polynomial-model.h  polynomial-regression.h  regression-shark.cc
Chapter03/shogun/: CMakeLists.txt  data.cc  data.h  grid-shogun.cc
Chapter04/data/: dataset0.csv  dataset1.csv  dataset2.csv  dataset3.csv  dataset4.csv  dataset5.csv
Chapter04/dlib/: CMakeLists.txt  dlib-cluster.cc
Chapter04/sharkml/: CMakeLists.txt  sharkml-cluster.cc
Chapter04/shogun/: CMakeLists.txt  shogun-cluster.cc
Chapter05/data/: multivar.csv  twoclusters.csv  univar.csv
Chapter05/dlib/: CMakeLists.txt  dlib-anomaly.cc  isolation-forest.h
Chapter05/sharkml/: CMakeLists.txt  sharkml-anomaly.cc
Chapter05/shogun/: CMakeLists.txt  shogun-anomaly.cc
Chapter06/dlib/: CMakeLists.txt  dlib-dr.cc
Chapter06/sharkml/: CMakeLists.txt  sharkml-dr.cc
Chapter06/shogun/: CMakeLists.txt  shogun-dr.cc
Chapter07/dlib/: CMakeLists.txt  dlib-classify.cc
Chapter07/sharkml/: CMakeLists.txt  sharkml-classify.cc
Chapter07/shogun/: CMakeLists.txt  shogun-classify.cc
Chapter08/eigen/: CMakeLists.txt  data_loader.h  eigen_recommender.cc
Chapter08/mlpack/: CMakeLists.txt  mlpack-recommender.cc
Chapter09/sharkml/: CMakeLists.txt  sharkml-ensemble.cc
Chapter09/shogun/: CMakeLists.txt  shogun-ensemble.cc
Chapter09/shogun/data/: data.h
Chapter10/data/: data.cc
Chapter10/dlib/: CMakeLists.txt  mlp-dlib.cc
Chapter10/pytorch/: CMakeLists.txt  lenet5.cpp  lenet5.h  main.cpp  mnistdataset.cpp  mnistdataset.h
Chapter10/sharkml/: CMakeLists.txt  mlp-sharkml.cc
Chapter10/shogun/: CMakeLists.txt  mlp-shogun.cc
Chapter11/pytorch/: CMakeLists.txt  README  glovedict.cc  glovedict.h  imdbdataset.cc  imdbdataset.h  imdbreader.cc  imdbreader.h  main.cc  rnn.cc  rnn.h  vocabulary.cc  vocabulary.h
Chapter12/caffe2/: CMakeLists.txt  main.cc
Chapter12/dlib/: CMakeLists.txt  dlib-save.cc
Chapter12/pytorch/: CMakeLists.txt  main.cc
Chapter12/sharkml/: CMakeLists.txt  shark-save.cc
Chapter12/shogun/: CMakeLists.txt  shogun-save.cc
Chapter13/android_classify/: local.properties  settings.gradle
Chapter13/android_classify/app/: build.gradle
Chapter13/android_classify/app/src/main/: AndroidManifest.xml
Chapter13/android_classify/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Chapter13/android_classify/app/src/main/java/com/example/camera2/: MainActivity.java
Chapter13/android_classify/app/src/main/res/layout/: activity_main.xml
Chapter13/android_classify/app/src/main/res/values/: strings.xml
Chapter13/android_classify/gradle/wrapper/: gradle-wrapper.properties
Chapter13/cloud_classify/client/: index.html  upload.js
Chapter13/cloud_classify/server/: CMakeLists.txt  README.md  main.cc  network.cc  network.h  utils.cc  utils.h
Chapter13/python/: export.sh  model_export.py
build_scripts/: build_ch1.sh  build_ch10.sh  build_ch11.sh  build_ch12.sh  build_ch13.sh  build_ch2.sh  build_ch3.sh  build_ch4.sh  build_ch5.sh  build_ch6.sh  build_ch7.sh  build_ch8.sh  build_ch9.sh
env_scripts/: README.md  checkout_lib.sh  dockerfile  install_android.sh  install_env.sh  install_lib.sh
